adjusted docs and build execution validation
