# src/main/java/com/agileengine/ecomm/generated/api/PurchaseOrderApi.java
@@ -1,0 +1,66 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.7.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package com.agileengine.ecomm.generated.api;
+
+import com.agileengine.ecomm.generated.model.PurchaseOrder;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.7.0")
+@Validated
+@Tag(name = "PurchaseOrder", description = "the PurchaseOrder API")
+public interface PurchaseOrderApi {
+
+    /**
+     * GET /purchaseOrders/{id} : Get an order by ID
+     *
+     * @param id  (required)
+     * @return A single order. (status code 200)
+     */
+    @Operation(
+        operationId = "purchaseOrdersIdGet",
+        summary = "Get an order by ID",
+        tags = { "PurchaseOrder" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "A single order.", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = PurchaseOrder.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/purchaseOrders/{id}",
+        produces = { "application/json" }
+    )
+    
+    ResponseEntity<PurchaseOrder> purchaseOrdersIdGet(
+        @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("id") String id
+    ) throws Exception;
+
+}
