# src/main/java/com/agileengine/ecomm/generated/api/PurchaseOrderApiApi.java
@@ -5,7 +5,7 @@
  */
 package com.agileengine.ecomm.generated.api;
 
-import com.agileengine.ecomm.generated.model.Order;
+import com.agileengine.ecomm.generated.model.PurchaseOrder;
 import io.swagger.v3.oas.annotations.ExternalDocumentation;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -34,135 +34,108 @@ import jakarta.annotation.Generated;
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.7.0")
 @Validated
-@Tag(name = "OrderApi", description = "the OrderApi API")
-public interface OrderApiApi {
+@Tag(name = "PurchaseOrderApi", description = "the PurchaseOrderApi API")
+public interface PurchaseOrderApiApi {
 
     /**
-     * GET /orders : Get a list of all orders
+     * GET /purchaseOrders : Get a list of all orders
      *
      * @return A list of orders. (status code 200)
      */
     @Operation(
-        operationId = "ordersGet",
+        operationId = "purchaseOrdersGet",
         summary = "Get a list of all orders",
-        tags = { "OrderApi" },
+        tags = { "PurchaseOrderApi" },
         responses = {
             @ApiResponse(responseCode = "200", description = "A list of orders.", content = {
-                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = Order.class)))
+                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = PurchaseOrder.class)))
             })
         }
     )
     @RequestMapping(
         method = RequestMethod.GET,
-        value = "/orders",
+        value = "/purchaseOrders",
         produces = { "application/json" }
     )
     
-    ResponseEntity<List<Order>> ordersGet(
+    ResponseEntity<List<PurchaseOrder>> purchaseOrdersGet(
         
     ) throws Exception;
 
 
     /**
-     * DELETE /orders/{id} : Delete an order by ID
+     * DELETE /purchaseOrders/{id} : Delete an order by ID
      *
      * @param id  (required)
      * @return Order deleted. (status code 204)
      */
     @Operation(
-        operationId = "ordersIdDelete",
+        operationId = "purchaseOrdersIdDelete",
         summary = "Delete an order by ID",
-        tags = { "OrderApi" },
+        tags = { "PurchaseOrderApi" },
         responses = {
             @ApiResponse(responseCode = "204", description = "Order deleted.")
         }
     )
     @RequestMapping(
         method = RequestMethod.DELETE,
-        value = "/orders/{id}"
+        value = "/purchaseOrders/{id}"
     )
     
-    ResponseEntity<Void> ordersIdDelete(
+    ResponseEntity<Void> purchaseOrdersIdDelete(
         @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("id") String id
     ) throws Exception;
 
 
     /**
-     * GET /orders/{id} : Get an order by ID
+     * PUT /purchaseOrders/{id} : Update an existing order
      *
      * @param id  (required)
-     * @return A single order. (status code 200)
-     */
-    @Operation(
-        operationId = "ordersIdGet",
-        summary = "Get an order by ID",
-        tags = { "OrderApi" },
-        responses = {
-            @ApiResponse(responseCode = "200", description = "A single order.", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = Order.class))
-            })
-        }
-    )
-    @RequestMapping(
-        method = RequestMethod.GET,
-        value = "/orders/{id}",
-        produces = { "application/json" }
-    )
-    
-    ResponseEntity<Order> ordersIdGet(
-        @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("id") String id
-    ) throws Exception;
-
-
-    /**
-     * PUT /orders/{id} : Update an existing order
-     *
-     * @param id  (required)
-     * @param order  (required)
+     * @param purchaseOrder  (required)
      * @return Order updated. (status code 200)
      */
     @Operation(
-        operationId = "ordersIdPut",
+        operationId = "purchaseOrdersIdPut",
         summary = "Update an existing order",
-        tags = { "OrderApi" },
+        tags = { "PurchaseOrderApi" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Order updated.")
         }
     )
     @RequestMapping(
         method = RequestMethod.PUT,
-        value = "/orders/{id}",
+        value = "/purchaseOrders/{id}",
         consumes = { "application/json" }
     )
     
-    ResponseEntity<Void> ordersIdPut(
+    ResponseEntity<Void> purchaseOrdersIdPut(
         @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("id") String id,
-        @Parameter(name = "Order", description = "", required = true) @Valid @RequestBody Order order
+        @Parameter(name = "PurchaseOrder", description = "", required = true) @Valid @RequestBody PurchaseOrder purchaseOrder
     ) throws Exception;
 
 
     /**
-     * POST /orders : Create a new order
+     * POST /purchaseOrders : Create a new order
      *
-     * @param order  (required)
-     * @return Order created. (status code 201)
+     * @param purchaseOrder  (required)
+     * @return PurchaseOrder created. (status code 201)
      */
     @Operation(
-        operationId = "ordersPost",
+        operationId = "purchaseOrdersPost",
         summary = "Create a new order",
-        tags = { "OrderApi" },
+        tags = { "PurchaseOrderApi" },
         responses = {
-            @ApiResponse(responseCode = "201", description = "Order created.")
+            @ApiResponse(responseCode = "201", description = "PurchaseOrder created.")
         }
     )
     @RequestMapping(
         method = RequestMethod.POST,
-        value = "/orders",
+        value = "/purchaseOrders",
         consumes = { "application/json" }
     )
     
-    ResponseEntity<Void> ordersPost(
-        @Parameter(name = "Order", description = "", required = true) @Valid @RequestBody Order order
+    ResponseEntity<Void> purchaseOrdersPost(
+        @Parameter(name = "PurchaseOrder", description = "", required = true) @Valid @RequestBody PurchaseOrder purchaseOrder
     ) throws Exception;
 
 }
